# opengl_c_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  main.c  run.sh
